argo/templates/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: remix-app
  namespace: remix-app
spec:
  hosts:
    - "remix.chirpsoftware.net"
  gateways:
    - api
  http:
    - match:
        - uri:
            prefix: /
          gateways:
            - api
      rewrite:
        uri: /
      route:
        - destination:
            port:
              number: 3000
            host: remix-app.remix-app.svc.cluster.local
